# library-fastapi

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  api.py  config.py  database.py  main.py  models.py  repositories.py  services.py
app/books/: models.py  schemas.py  services.py  views.py
app/migrations/: env.py
app/migrations/versions/: da58370769b8_create_book_table.py
app/utils/: api_utils.py  exceptions.py  hateoas.py  utils.py
scripts/: start.sh
tests/: conftest.py  factories.py  utils.py
tests/integration/books/: test_endpoints.py
tests/output_fixtures/: books.py
tests/unit/books/: test_repositories.py  test_services.py
