[project]
name = "library-fastapi"
version = "1.0.0"
description = "Example project for FastAPI and uv"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.15.2",
    "fastapi>=0.115.12",
    "fastapi-cli>=0.0.7",
    "psycopg>=3.2.7",
    "pydantic-settings>=2.9.1",
    "sqlalchemy>=2.0.40",
]

[dependency-groups]
dev = [
    "factory-boy>=3.3.3",
    "pytest>=8.3.5",
]
lint = [
    "ruff>=0.11.8",
]
